inputstream reader update. bump validation version to 1.6.1-SNAPSHOT